--- a/Application.RFPSystem/appsettings.json
+++ b/Application.RFPSystem/appsettings.json
@@ -4,6 +4,9 @@
       "Default": "Warning"
     }
   },
+  "Production": {
+    "SqlConnectionString": "Data Source=WELCOME-PC\\SQLSERVER2008;Initial Catalog=MyDB;Integrated Security=True"
+  },
   "CorsEnableDomain": {
     "Domain": "http://localhost:53317"
   },
