--- a/Application.RFPUI/ClientApp/package.json
+++ b/Application.RFPUI/ClientApp/package.json
@@ -30,7 +30,8 @@
     "bootstrap": "^3.3.7",
     "chart.js": "^2.8.0",
     "chartjs-plugin-datalabels": "^0.7.0",
-    "core-js": "^3.2.1",
+    "classlist.js": "^1.1.20150312",
+    "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "material-design-icons": "^3.0.1",
@@ -38,6 +39,7 @@
     "ngx-toastr": "^11.1.0",
     "rxjs": "^6.5.2",
     "tslib": "^1.10.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
