--- a/Application.RFPSystem/appsettings.json
+++ b/Application.RFPSystem/appsettings.json
@@ -9,6 +9,7 @@
   },
   "CorsEnableDomain": {
     "Domain": "http://10.130.4.144:8088"
+    //"Domain": "http://localhost:53317"
   },
   "AllowedHosts": "*"
 }
