--- a/Application.RFPUI/ClientApp/package.json
+++ b/Application.RFPUI/ClientApp/package.json
@@ -26,6 +26,8 @@
     "@angular/platform-server": "^5.2.0",
     "@angular/router": "^8.2.2",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0",
+    "ag-grid-angular": "^22.1.1",
+    "ag-grid-community": "^22.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^3.3.7",
     "chart.js": "^2.8.0",
