--- a/Application.RFPSystem/appsettings.json
+++ b/Application.RFPSystem/appsettings.json
@@ -8,8 +8,8 @@
     "SqlConnectionString": "Data Source=WELCOME-PC\\SQLSERVER2008;Initial Catalog=MyDB;Integrated Security=True"
   },
   "CorsEnableDomain": {
-    "Domain": "http://10.130.4.144:8088"
-    //"Domain": "http://localhost:53317"
+    //"Domain": "http://10.130.4.144:8088"
+    "Domain": "https://localhost:44394"
   },
   "AllowedHosts": "*"
 }
